--- a/index.html
+++ b/index.html
@@ -1,89 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
-  <title>Region_page</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script defer src="index.js"></script>
+    <title>Online Vote</title>
 </head>
 <body>
-
-  <!-- Navbar part -->
-  <div class="navbar">
-    <img src="logo.png" alt="LOGO" class="LOGO">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Help</a></li>
-      <li class="profile"><a href="#"><img src="profile-icon.png" alt="Profile Icon"></a></li>
-    </ul>
-  </div> 
-
-  <!-- Note Part -->
-  <div class="note">
-    <h2>Important Note:</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, magnam tempore. Quod quasi voluptates asperiores aperiam. Delectus illum tenetur ducimus exercitationem, in accusamus nisi necessitatibus vitae voluptas, totam soluta culpa laboriosam, perspiciatis tempore libero. Aperiam itaque, sit quas consequuntur enim earum exercitationem rem vitae distinctio dolores magni doloremque, minima sequi commodi, quae neque a eaque repellat tempore assumenda nihil impedit consequatur doloribus. Quia corrupti, inventore libero aut est doloremque saepe atque aspernatur numquam voluptate error eius iusto cumque, itaque illum? Non magni, saepe aliquam quasi reiciendis sit itaque perferendis cupiditate modi dignissimos, repellendus sequi delectus nihil cum quis expedita in.</p>
-  </div>
-
-  <!-- Event Name Part 1 -->
-  <div class="region_box">
-    <h2>Region of Voting</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde dicta quae ratione iusto fugit? Optio, praesentium quas incidunt ipsam corrupti culpa voluptate provident earum maxime, consequatur recusandae veniam ex, totam cumque placeat quos facilis dolores. Tenetur optio autem nam sequi inventore odio debitis, nostrum dignissimos amet asperiores illum dolorem alias.</p>
-    <p>15-02-2023, 10:00:00 to 20-02-2023, 18:00:00</p>
-    <a href="https://www.example.com" class="button">Click Here</a>
-  </div>
-
-  <!-- Event Name Part 2 -->
-  <div class="region_box">
-    <h2>Region of Voting</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde dicta quae ratione iusto fugit? Optio, praesentium quas incidunt ipsam corrupti culpa voluptate provident earum maxime, consequatur recusandae veniam ex, totam cumque placeat quos facilis dolores. Tenetur optio autem nam sequi inventore odio debitis, nostrum dignissimos amet asperiores illum dolorem alias.</p>
-    <p>15-02-2023, 10:00:00 to 20-02-2023, 18:00:00</p>
-    <a href="https://www.example.com" class="button">Click Here</a>
-  </div>
-
-  <!-- Event Name Part 3 -->
-  <div class="region_box">
-    <h2>Region of Voting</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde dicta quae ratione iusto fugit? Optio, praesentium quas incidunt ipsam corrupti culpa voluptate provident earum maxime, consequatur recusandae veniam ex, totam cumque placeat quos facilis dolores. Tenetur optio autem nam sequi inventore odio debitis, nostrum dignissimos amet asperiores illum dolorem alias.</p>
-    <p>15-02-2023, 10:00:00 to 20-02-2023, 18:00:00</p>
-    <a href="https://www.example.com" class="button">Click Here</a>
-  </div>
-
-  <!-- Footer Part -->
-  <footer>
-    <div class="container">
-      <div class="about">
-        <h2>About Us</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum cumque sunt maiores quasi corporis, porro quibusdam ratione rem voluptatum consequuntur nam fuga modi suscipit nisi iure ipsa doloribus possimus eligendi omnis in quam quidem velit rerum dolore? Incidunt odio molestias deserunt rerum sunt quidem natus veniam, velit voluptas harum placeat.<p>
-      </div>
-      <div class="help">
-        <h2>Help</h2>
-        <ul>
-          <li><i class="fa">&#xf013;</i><i class="fas fa-map-marker-alt"></i>123 Main St, Bangla, India</li>
-        </ul>
-        <ul>
-          <li><i class="fa">&#xf098;</i><i class="fas fa-phone"></i>+91 00000 00000</li>
-        </ul>
-        <ul>
-          <li><i class="fa">&#xe158;</i><i class="fas fa-envelope"></i><a href="mailto:help@company.com">help@company.com</a></li>
-        </ul>
-      </div>
-      <div class="social_media">
-        <a href="https://www.whatsapp.com" target="_blank" rel="noopener" title="Visit WhatsApp"><i class="whatsapp"></i></a>
-        <a href="https://www.facebook.com" target="_blank" rel="noopener" title="Visit Facebook"><i class="facebook"></i></a>
-        <a href="https://www.linkedin.com" target="_blank" rel="noopener" title="Visit LinkedIn"><i class="linkedin"></i></a>
-        <a href="https://www.youtube.com" target="_blank" rel="noopener" title="Visit YouTube"><i class="youtube"></i></a>
-      </div>
-    </div>
-    <div class="disclaimer">
-      <p>Copyright© 2022 All rights reserved | 
-        <span>This template is made by Group D</span>
-      </p>
-    </div>
-  </footer>
-  
-
+    <!--------------------
+        Header Section
+    ---------------------->
+    <header class="header">
+        <div class="logo">ABINASH</div>
+        <nav class="navbar">
+            <div>
+                <ul class="navbar_list">
+                    <li>
+                        <a class="navbar_link" href="">Home</a>
+                    </li>
+                    <li>
+                        <a class="navbar_link" href="">Contact</a>
+                    </li>
+                    <li>
+                        <a class="navbar_link" href="">About</a>
+                    </li>
+                    <li>
+                        <a class="navbar_link" href="">Help</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="login">
+            <ul class="login_list">
+                <li>
+                    <a class="navbar_link" href="login.html">Sign In</a>
+                </li>
+                <li>
+                    <a class="signup" href="#">Sign Up</a>
+                </li>
+            </ul>
+        </div>
+        <div class="mobile_navbar_btn">
+            <ion-icon name="menu-outline" class="mobile_navbar_icon"></ion-icon>
+            <ion-icon name="close-outline" class="mobile_navbar_icon"></ion-icon>
+        </div>
+    </header>
+    <!--------------------
+        Main Section
+    ---------------------->
+    <main>
+        <section class="section section_main" id="section_main">
+            <div class="container grid grid_two_column">
+                <div class="section_main_data">
+                    <h1 class="main_heading">Online Voting</h1>
+                    <p>Online voting systems offer a number of advantages over traditional paper ballots, such as increased efficiency, improved accuracy, greater voter engagement, and better security. With online voting systems, the voting process can be completed quickly and securely, eliminating the need for paper ballots and making the process more efficient. Additionally, the accuracy of the vote is improved, as online voting systems are designed to ensure that each vote is counted correctly and securely. Additionally, online voting systems can increase voter engagement, as they make it easier for people to access information about the voting process and cast their votes from any location. Finally, online voting systems are more secure than traditional paper ballots, as they are designed to prevent fraud and tampering.</p>
+                    <div class="btn_section">
+                        <a href="#" class="btn">Learn More</a>
+                        <a href="#" class="btn">Get Start <span><ion-icon name="arrow-forward-outline"></ion-icon></span></a>
+                    </div>
+                </div>
+                <div class="section_img">
+                    <img class="main_img" src="image/4428.jpg" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+    <!--------------------
+        Need Info Section
+    ---------------------->
+    <section class="section section_need" id="section_need">
+        <div class="container grid grid_two_column">
+            <div class="section_img">
+                <img class="main_img" src="image/6383.jpg" alt="">
+            </div>
+            <div class="section_data">
+                <h2 class="need_heading">Why Need</h2>
+                <ul class="need_list">
+                    Online voting systems provide an efficient and secure way to cast votes in an election. By using online voting systems, citizens can cast their votes from any location, eliminating the need to travel to the polling place. Additionally, online voting systems provide a higher level of accuracy and transparency, as they are able to record votes in real-time and can be easily audited. Furthermore, they provide a secure voting process, as votes are encrypted and stored on a secure server. Finally, online voting systems make it easier for citizens with disabilities or mobility issues to participate in the voting process.
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!--------------------
+        Intruction Info Section
+    ---------------------->
+    <section class="section section_intru" id="section_intru">
+        <div class="container grid grid_two_column">
+            <div class="section_data">
+                <h2 class="intru_heading">Instruction</h2>
+                <ul class="need_list">
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis.</li>
+                </ul>
+            </div>
+            <div class="section_img">
+                <img class="main_img" src="image/6383.jpg" alt=""><!--video-->
+            </div>
+        </div>
+    </section>
+        <!--------------------
+        Footer Section
+    ---------------------->
+    <footer class="section footer">
+        <div class="footer_section container grid grid_three_column">
+            <div class="section_footer_about">
+                <h3>About</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi nulla voluptatibus esse, cupiditate itaque est reprehenderit dolore quas earum quibusdam eaque eum nemo necessitatibus, animi dolores magnam id. Vitae.</p>
+            </div>
+            <div class="section_footer_service">
+                <h3>Services</h3>
+                <ul>
+                    <li>
+                        <a href="">Gov</a>
+                    </li>
+                    <li>
+                        <a href="">private</a>
+                    </li>
+                    <li>
+                        <a href="">organiger</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="section_footer_help">
+                <h3>Help</h3>
+                <address>
+                    <div>
+                        <p>
+                            <span><ion-icon name="location-outline"></ion-icon></span>
+                            Kolkata, India
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <span><ion-icon name="call-outline"></ion-icon></span>
+                            <a href="">+91 8013070719</a>
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <span><ion-icon name="mail-unread-outline"></ion-icon></span>
+                            <a href="">abinashch200@gmail.com</a>
+                        </p>
+                    </div>
+                </address>
+            </div>
+        </div>
+        <div class="container">
+            <div class="footer_social_media">
+                <a href="">
+                    <ion-icon class="icons" name="logo-whatsapp"></ion-icon>
+                </a>
+                <a href="">
+                    <ion-icon class="icons" name="logo-youtube"></ion-icon>
+                </a>
+                <a href="">
+                    <ion-icon class="icons" name="logo-linkedin"></ion-icon>
+                </a>
+                <a href="">
+                    <ion-icon class="icons" name="logo-facebook"></ion-icon>
+                </a>
+            </div>
+            <div class="footer_credits">
+                <p>Copyrright© 2023 All rigths reverved</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
